# world-cup-2026

./: README.md  pyproject.toml
data/: team_aliases.yaml
data/fixtures/: group_stage.yaml
data/odds/: exact_scores_latest.json
docs/: PLAN.md  exact_scores_by_group.md
docs/trackers/: learnings.md  log.md  phases.yaml  state.yaml
src/world_cup_2026/: __init__.py  cli.py  fixtures.py  models.py  trackers.py
src/world_cup_2026/polymarket/: __init__.py  client.py  discover.py  exact_score.py  moneyline.py  prices.py
